--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="nouislider/nouislider.css">
+  <link rel="stylesheet" href="leaflet/leaflet.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кексобукинг</title>
@@ -19,7 +21,7 @@
     <section class="map">
 
       <!-- Блок для вставки карты -->
-      <div class="map__canvas" id="map-canvas"></div>
+      <div class="map__canvas" id="map-canvas" width="100%" height="500"></div>
 
       <!-- Фильтрация объявлений -->
       <div class="map__filters-container">
@@ -89,12 +91,12 @@
           <label class="ad-form__label" for="title">Заголовок объявления</label>
           <input id="title" type="text" name="title" placeholder="Милая, уютная квартирка в центре Токио" required minlength="30" maxlength="100"
           data-pristine-required-message="Обязательное поле"
-          data-pristine-minlength-message="Минимальная длина 30 символов"
-          data-pristine-maxlength-message="Максимальная длина 100 символов">
+          data-pristine-minlength-message="Минимальная длина 30&nbsp;символов"
+          data-pristine-maxlength-message="Максимальная длина 100&nbsp;символов">
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес (координаты)</label>
-          <input id="address" name="address" type="text" value="35.65393, 139.79433" readonly>
+          <input id="address" name="address" type="text" readonly>
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="type">Тип жилья</label>
@@ -106,7 +108,7 @@
             <option value="palace">Дворец</option>
           </select>
         </fieldset>
-        <fieldset class="ad-form__element">
+        <fieldset class="ad-form__element ad-form__element--price">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
           <input id="price" type="number" name="price" placeholder="0" required min="0" max="100000"
           data-pristine-required-message="Обязательное поле"
@@ -236,7 +238,9 @@
     </div>
   </template>
 
+  <script src="nouislider/nouislider.js"></script>
   <script src="pristine/pristine.min.js"></script>
+  <script src="leaflet/leaflet.js"></script>
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
